; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-loop-ivopts.c_force_var_cost.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-loop-ivopts.c_force_var_cost.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ivopts_data = type { i32 }

@fd_ivopts_data = common dso_local global %struct.ivopts_data* null, align 8
@find_depends = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ivopts_data*, i32, i32*)* @force_var_cost to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @force_var_cost(%struct.ivopts_data* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.ivopts_data*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store %struct.ivopts_data* %0, %struct.ivopts_data** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.ivopts_data*, %struct.ivopts_data** %4, align 8
  store %struct.ivopts_data* %10, %struct.ivopts_data** @fd_ivopts_data, align 8
  %11 = load i32, i32* @find_depends, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @walk_tree(i32* %5, i32 %11, i32* %12, i32* null)
  br label %14

14:                                               ; preds = %9, %3
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @force_expr_to_var_cost(i32 %15)
  ret i32 %16
}

declare dso_local i32 @walk_tree(i32*, i32, i32*, i32*) #1

declare dso_local i32 @force_expr_to_var_cost(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
